# jp-imports

./: .dockerignore  .gitignore  Cargo.toml  Dash.py  Dockerfile  README.md  diesel.toml  docker-compose.yaml  dockerfile  environment.yaml  environment.yml  flake.nix  git_contributors_report.txt  graphs.py  imports_data.pkl  main.py  mkdocs.yml  pyproject.toml  reports.sh  requirements.txt  todo.md
.github/workflows/: run_test.yml
docs/: Makefile  conf.py  index.rst  make.bat
migrations/2024-10-02-181218_hts/: down.sql  up.sql
migrations/2024-10-02-181257_naics/: down.sql  up.sql
migrations/2024-10-02-181321_products/: down.sql  up.sql
migrations/2024-10-02-181340_transactions/: down.sql  up.sql
notebooks/: agr.qmd  combinations.qmd  commontrade.qmd  db.qmd  db_imports.qmd  dev.ipynb  dev.qmd  duckdb.qmd  filter.qmd  filter2.qmd  import.qmd  imports.qmd  moving.qmd  naics.qmd  optimization.qmd  ouslan-test.ipynb  preformance.qmd  pull_file.qmd  simplify.qmd  test.qmd  tests.qmd  visualisation.qmd  viz.qmd
reports/: ouslan-report-01.ipynb
src/: models.py  schema.rs
src-imports/jp_imports/: data_pull.py
src/dao/: jp_imports_raw.py  naics.sql  schema.sql
src/data/: data_clean.py  data_process.py  data_pull.py  data_trans.py  test_data_clean.py  timescale.py
src/features/: ajustments.py  download.py  downloader.py  pdf_data_processed.py
src/import_export_tools/: data_process.py  data_pull.py
src/jp_imports/: data_process.py  data_pull.py  data_viz.py  models.py
src/visualization/: graphs.py
src/viz/: data_viz.py
test/: test_inserts.py  test_jp_outputs.py  test_org_outputs.py  test_outputs.py
test/test_inserts/: jp_data_sample.parquet  jp_results_fiscal_hts_False.parquet  jp_results_fiscal_hts_True.parquet  jp_results_fiscal_naics_False.parquet  jp_results_fiscal_naics_True.parquet  jp_results_fiscal_total_False.parquet  jp_results_fiscal_total_True.parquet  jp_results_monthly_hts_False.parquet  jp_results_monthly_hts_True.parquet  jp_results_monthly_naics_False.parquet  jp_results_monthly_naics_True.parquet  jp_results_monthly_total_False.parquet  jp_results_monthly_total_True.parquet  jp_results_qrt_hts_False.parquet  jp_results_qrt_hts_True.parquet  jp_results_qrt_naics_False.parquet  jp_results_qrt_naics_True.parquet  jp_results_qrt_total_False.parquet  jp_results_qrt_total_True.parquet  jp_results_yearly_hts_False.parquet  jp_results_yearly_hts_True.parquet  org_data_sample.parquet  (+22 more)
(+43 files in other folders)
