[project]
name = "jp-imports"
version = "0.1.0"
authors = [{ name = "Alejandro Ousland", email = "alejandro.ouslan@upr.edu" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ibis-framework[sqlite]>=9.5.0",
  "jupyter>=1.1.1",
  "pandas>=2.2.3",
  "polars>=1.16.0",
  "psycopg2-binary>=2.9.10",
  "pytest>=8.3.4",
  "requests>=2.32.3",
  "sqlmodel>=0.0.22",
  "tqdm>=4.67.1",
]
